Add endpoint to retrieve all network tools with offerings
